welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:26: error: not found: value Direction
  if (getDirection() == Direction.WEST)
                        ^